fixed alignment to andrews spec

--- a/public/stylesheets/sass/login.sass
+++ b/public/stylesheets/sass/login.sass
@@ -80,10 +80,10 @@
     .logo-wrap
       width: 620px
       margin: auto
-      height: 77px
+      height: 87px
 
       #logo
-        margin: -34px 0 0 -112px
+        margin: -34px 0 0 -102px
     .or
       font-size: 14px
       color: #b8d9ff
@@ -195,7 +195,7 @@
 
       input.input
         +input
-        margin-left: -9px
+        margin-left: -8px
 
       h2
         float: left
@@ -298,7 +298,7 @@
       display: block
     p
       width: 231px
-      height: 53px
+      height: 50px
       float: right
       a
         display: block
